--- a/src/common-components/layout/styles.css
+++ b/src/common-components/layout/styles.css
@@ -45,3 +45,10 @@ body {
   padding: 10px;
   font-weight: bold;
 }
+.outlet-container {
+  display: flex;
+  justify-content: center;
+}
+.outlet-style {
+  max-width: 700px;
+}
